syntax = "proto3";

import "google/protobuf/empty.proto";

message GameServerUpRequest {
	string address = 1;

	string version = 2;
	string name = 3;

	string gametype = 4;
	string map = 5;

	int32 max_clients = 6;
	int32 max_players = 7;

	message Client {
		string name = 1;
		string clan = 2;
		int32 country = 3;
		int32 score = 4;
		bool ingame = 5;
	}

	repeated Client clients = 8;
}

message MasterServerUpRequest {
	string address = 1;
	repeated string game_servers_address = 2;
}

message MasterServerDownRequest {
	string address = 1;
}

service Update {
	rpc game_server_up(GameServerUpRequest) returns (google.protobuf.Empty) {}
	rpc master_server_up(MasterServerUpRequest) returns (google.protobuf.Empty) {}
	rpc master_server_down(MasterServerDownRequest) returns (google.protobuf.Empty) {}
}

